traefik_gateway_api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: myapp
  labels:
    app: demo
spec:
  selector:
    app: python-hello-world-app  # Must match the labels of your deployment's pods
  ports:
    - protocol: TCP
      port: 80         # The port on the service
      targetPort: 5000 # The port the application listens on in the pod (container port)
  type: ClusterIP
