traefik_gateway_api/httproute.yaml
# HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-httproute
  namespace: myapp
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: web
    kind: Gateway
    namespace: traefik-v2
  hostnames:
  - whoami.myexample.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: demo-service
      namespace: myapp
      port: 80
